grammar_to_ply/error_msgs.txt
  File "../programs/python/loop/output_programs/sum_till_n_2remove.py", line 1
    list = [ 1 , 2 , 3 , 4 5 ] n+ for in list : n+ sum = sum + i n+ 
                           ^
SyntaxError: invalid syntax
